Enh 35829003 - [35810444->24.03] Remove the need for JPMS --add-exports java.management/sun.management=com.oracle.coherence for Berkeley Database external scheme (main->ce-main @ 103390)
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 103455]